# soccer_prediciton_ML

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: deploy.yml
backend/: auth.py  config.py  db.py  deps.py  main.py  middleware.py  scheduler.py
backend/collectors/: api_football.py  base.py  fbref.py  football_data.py  fpl_api.py  mock_data.py  transfermarkt.py
backend/evaluation/: backtest.py  calibration.py
backend/features/: fpl_features.py  match_features.py  player_features.py
backend/models/: fpl_optimizer.py  match_predictor.py  player_similarity.py  season_simulator.py  value_detector.py
backend/routers/: betting.py  fpl.py  health.py  matches.py  predictions.py  scouting.py  standings.py  sync.py  title_race.py  user.py
backend/services/: betting_service.py  coin_service.py  fpl_service.py  prediction_service.py  scouting_service.py
backend/storage/: migrations.py  schema.sql
configs/: leagues.yaml  model_params.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: betting.ts  client.ts  fpl.ts  matches.ts  scouting.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/contexts/: LeagueContext.tsx  UserContext.tsx
frontend/src/hooks/: useQuery.ts
frontend/src/pages/: BettingEV.tsx  Dashboard.tsx  FPLOptimizer.tsx  MatchPrediction.tsx  ModelPerformance.tsx  PlayerScouting.tsx  Profile.tsx  Standings.tsx  TitleRace.tsx
(+21 files in other folders)
