[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "football-analytics"
version = "0.1.0"
description = "Football Analytics Module with FPL optimization and match prediction"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "duckdb>=0.10.3",
    "xgboost>=2.0.3",
    "lightgbm>=4.3.0",
    "scikit-learn>=1.4.2",
    "pulp>=2.8.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.1",
    "scipy>=1.13.0",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
